src/objects/CaseDep__c.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <description>This field is used to store case component field value</description>
        <label>Component</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductVersion__c</fullName>
        <label>ProductVersion</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcomponent__c</fullName>
        <label>Subcomponent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <description>This object is store case field dependent records</description>
    <label>CaseDep</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>CaseDepName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseDep</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>